--- a/public/markup/local161.html
+++ b/public/markup/local161.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles/master.css">
   <link rel="stylesheet" href="styles/topnav.css">
   <link rel="stylesheet" href="styles/local161.css">
-  <link rel="stylesheet" href="styles/local161logo.css">
+  <link rel="stylesheet" href="styles/local161hero.css">
   <link rel="stylesheet" href="styles/dividers.css">
   <link rel="stylesheet" href="styles/imagery.css">
   <link rel="stylesheet" href="styles/footer.css">
@@ -74,48 +74,58 @@
 
     <!-- Local 161: The Official Community -->
     <div class="divider" id="logo">
-      <div id="logo-content">
-        <div id="central-container">
-          <div id="local-161-logo">
-            <h1 id="local">Local</h1>
-            <h1 id="number">161</h1>
-          </div>
-          <img class="stamp" src="./images/white_stamp.png" alt="white_stamp.png">
-          <h2 id="local-161-tagline">The Official Community</h2>
-        </div>
+      <div id="logo-container">
+        <img id="local161-logo" src="./images/local161-logo-white.svg" alt="local161-logo-subtext.svg">
       </div>
       <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
-      <!-- <img class="divider-image" src="./images/bg25.jpg" alt="bg25.jpg"> -->
+      <img class="divider-image" src="./images/Scan20.jpg" alt="bg26.jpg">
     </div>
 
     <!-- We Are -->
     <div class="divider" id="who-we-are">
       <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
-      <div class="text" id="who-we-are-text">
-        <h1>We Are</h1>
+      <div class="text">
+        <p>
+          <span class="arial-bold-text">The Public Works SF</span> would like to invite you to join the ranks of the <span class="arial-bold-text">LOCAL 161!</span>
+        </p>
+        <p>
+          <span class="arial-bold-text">LOCAL 161</span> is the community engagement division of <span class="arial-bold-text">The Public Works SF</span>. As a hub for cultural activity in San Francisco, <span class="arial-bold-text">The Public Works SF</span> event space welcomes the Bay Area community at large to participate in our mission to "Give the people what they want".
+        </p>
+        <p>
+          We believe that the people want good times, good music, and good company in safe, welcoming spaces. We believe this ethos extends beyong our dance floor, and requires diligence and action.
+        </p>
+        <img src="./images/pw_manhole_white.png" alt="pw_manhole_white">
       </div>
       <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
-      <!-- <img class="divider-image" src="./images/bg26.jpg" alt="bg26.jpg"> -->
     </div>
 
     <!-- What We Do -->
     <div class="divider" id="what-we-do">
       <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
       <div class="text">
-        <h1>Our Vision</h1>
+        <p>
+          By joining <span class="arial-bold-text">LOCAL 161</span>, you are pledging the following:
+        </p>
+        <ul>
+          <li>
+            Participate in <span class="arial-bold-text">The Public Works SF</span> mission to "Give the people what they want" - good times, good music, and good company.
+          </li>
+          <li>
+            Attend Public Works events as often as I am able.
+          </li>
+          <li>
+            Receive correspondence and communications from <span class="arial-bold-text">The Public Works SF</span> which may include (but are not limited to) offering for free drinks, free entry to the space, free merchandise, and various other prizes and gifts.
+          </li>
+          <li>
+            Treat my fellow humans with respect & compassion.
+          </li>
+          <li>
+            Encourage the growth of art, creativity and community.
+          </li>
+        </ul>
+        <img src="./images/pw_manhole_white.png" alt="pw_manhole_white">
       </div>
       <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
-      <!-- <img class="divider-image" src="./images/bg27.jpg" alt="bg27.png"> -->
-    </div>
-
-    <!-- Local161 -->
-    <div class="divider" id="newsletter">
-      <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
-      <div class="text">
-        <h1>Local 161</h1>
-      </div>
-      <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
-      <!-- <img class="divider-image" src="./images/bg28.jpg" alt="bg28.jpg"> -->
     </div>
 
     <!-- Join the Ranks -->
@@ -125,10 +135,9 @@
         <h1>Join the Ranks</h1>
         <form action="">
           <input id="email-input-box" type="text">
-          <button class="action-button" id="email-submit-button" type="button">Submit</button>
+          <button class="action-button" id="action-button-local161" type="button">Submit</button>
         </form>
       </div>
-      <!-- <img class="divider-image" src="./images/bg18.jpg" alt="bg18.jpg"> -->
     </div>
 
     <!-- Manhole -->
