eventbrite script to head

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/pw_jackhammerkid.png">
+    <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js" async></script>
+
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,7 +29,6 @@
     <title>Public Works SF</title>
   </head>
   <body>
-    <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
