--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/pw_jackhammerkid.png">
-    <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js" async></script>
+    <!-- <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js" async></script> -->
 
 
     <!--
